# wxc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  install_app.py  pyproject.toml  renovate.json  setup.cfg  setup.py  test_requirements.txt
.github/: dependabot.yml  renovate.json5
.github/workflows/: bleeding_edge.yml  cd.yml  ci.yml  type-checking.yaml  workflow.yml
gallery/: carbon-config.json
pyw/: __init__.py  __main__.py  _installer.py  api.py  cli.py
pyw/externs/_stdlib_list/: base.py
requirements/: tests.txt
src/wxc/: __init__.py  __main__.py  api.py  cli.py  levenshtein.py
tests/: conftest.py  test_api.py  test_builtin.py  test_cli.py  test_install.py  test_missing_deps.py  test_schema.py  test_self_dunder_version.py  test_stdlib.py
tests/data/fake_empty_module/: __init__.py
whych/: __init__.py  __main__.py  _installer.py  api.py  cli.py
whych/externs/_stdlib_list/: __init__.py  _version.py  base.py  fetch.py
whych/tests/: test_api.py  test_cli.py  test_install.py  test_schema.py
whych/tests/data/fake_empty_module/: __init__.py
wxc/: __init__.py  __main__.py  api.py  cli.py  levensthein.py  levnesthein.py
