[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "wxc"
version = "7.1.0"
description = "A CLI facility to inspect Python environments."
authors = [
    { name = "C.M.T. Robert" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=10.13.0",
    "stdlib-list>=0.8;python_version < \"3.10\"",
]

[project.license]
text = "GPL-3.0"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
wxc = "wxc.cli:main"

[project.urls]
Homepage = "https://github.com/neutrinoceros/wxc"

[tool.setuptools]
license-files = [
    "LICENSE",
]
include-package-data = false

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "testing*",
]
namespaces = false

[tool.ruff]
target-version = "py38" # https://github.com/charliermarsh/ruff/issues/2039
exclude = ["*__init__.py"]
ignore = ["E501"]
select = [
    "E",
    "F",
    "W",
    "B",
    "I",
    "UP",
]

[tool.ruff.isort]
combine-as-imports = true

[tool.coverage.paths]
source = [
  "/home/runner/work/wxc",
  "/Users/runner/work/wxc",
  "D:\\a\\wxc",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    # a more strict default pragma
    "\\# pragma: no cover\\b",

    # allow defensive code
    "^\\s*raise NotImplementedError\\b",

    # typing-related code
    "^if TYPE_CHECKING:",
    ": \\.\\.\\.(\\s*#.*)?$",
    "^ +\\.\\.\\.$",
    "-> ['\"]?NoReturn['\"]?:",
]

[tool.coverage.run]
omit = [
  "wxc/__main__.py",
  "tests/data/*.py",
]
parallel = true

[tool.mypy]
python_version = "3.8"
show_error_codes = true
pretty = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true

[tool.pytest]
filterwarnings = [
  "error",
]
