[metadata]
name = whych
version = 2.2,
description = A CLI facility to inspect Python environments.
long_description = file: README.md
long_description_content_type = text/markdown
author = Clément Robert
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_script =
    whych = whych.cli:main

[options.packages.find]
exclude =
    tests*
    testing*

[mypy]
python_version = 3.6
warn_return_any = True
warn_unused_configs = True

[flake8]
exclude = whych/__init__.py
ignore = E203, E501, W503
