[metadata]
name = pyw
version = 5.0.0
description = A CLI facility to inspect Python environments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neutrinoceros/pyw
author = C.M.T. Robert
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    importlib-metadata
    stdlib-list>=0.8
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pyw=pyw.cli:main
console_script =
    pyw = pyw.cli:main

[options.packages.find]
exclude =
    tests*
    testing*

[mypy]
python_version = 3.6
warn_return_any = True
warn_unused_configs = True

[flake8]
exclude = pyw/__init__.py
ignore = E203, E501, W503
