[metadata]
name = wxc
version = 6.2.0
description = A CLI facility to inspect Python environments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neutrinoceros/wxc
author = C.M.T. Robert
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    importlib-metadata
    stdlib-list>=0.8;python_version < "3.10"
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    wxc=wxc.cli:main

[options.extras_require]
dev =
    pytest>=6.0.2
    pytest-cov
    pytest_datadir>=1.3.1
    pytest_mock>=3.5.1
    schema>=0.7.2
    toml
    numpy;python_version < "3.10"

[mypy]
python_version = 3.6
warn_return_any = True
warn_unused_configs = True

[flake8]
exclude = wxc/__init__.py
ignore = E203, E501, W503
